# SuperTetris

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.python_logic  README.md  build.sh  docker-compose.yml  integration_test.sh  requirements.txt  start.bat  start.sh  system_test.sh
docs/: architecture.md  architecture_validation.md  deployment.md  development.md  integration.md  security.md  testing.md
src/common_utils/: config_utils.py  file_utils.py  json_utils.py  logging_utils.py
src/go_tools/: Dockerfile  dev_tools.go  go.mod  main.go
src/integration/: README.md
src/julia_ai/: Dockerfile  Project.toml  ai_system.jl  compile.jl
src/python_ai/: Dockerfile  main.py
src/python_ai/src/: ai_system.py  (+2 more)
src/python_analytics/: Dockerfile  main.py  requirements.txt
src/python_logic/: Dockerfile  game_logic.py  requirements.txt
src/python_server/: Dockerfile  __init__.py  requirements.txt
src/python_tools/: Dockerfile  main.py
src/rust_server/: Cargo.toml  Dockerfile  game_server.rs
src/rust_server/config/: server.toml
src/rust_server/src/: config.rs  ffi.rs  game.rs  lib.rs  main.rs  network.rs  physics.rs  session.rs  utils.rs
src/scala_analytics/: Dockerfile  analytics_system.scala  build.sbt
src/tests/: integration_tests.py
src/typescript_client/: Dockerfile  eslint.config.js  game_renderer.tsx  index.tsx  package-lock.json  package.json  webpack.config.js
src/utils/: cache.rs  config.rs  constants.rs  file.rs  json.rs  logging.rs  metrics.rs  mod.rs  random.rs  time.rs  uuid.rs  validation.rs
tests/: run_integration_tests.py
(+19 files in other folders)
