[package]
name = "tetris_server"
version = "0.1.0"
edition = "2021"
authors = ["Tetris Towers Team"]
description = "Server component for Tetris Towers game"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.4"
rand = "0.8"
libloading = "0.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
regex = "1.9"
serde_yaml = "0.9"
toml = "0.8"

[lib]
name = "tetris_towers_server"
path = "src/lib.rs"

[[bin]]
name = "tetris_towers_server"
path = "src/main.rs"

[build-dependencies]
cbindgen = "0.24"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.5"
